jake/style.css
@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');


body {
  text-align: center;
  font-family: 'Indie Flower', 'Amatic SC', 'Courier New', Courier, monospace;
  margin: 0;
  padding: 0;
  background-color: rgb(228 231 180);
  font-size: 20px;
}


header {
  padding: 20px;
  height: auto;
  background: rgb(25, 24, 26);
  color: rgb(255, 255, 255);
  font-family: 'Amatic SC', 'Courier New', Courier, monospace;
}

header h1 {
  margin: 0;
  font-size: 3.5em;
}

footer {
  position: fixed;
  bottom: 0;
  left: 50%;
  transform: translateX(-50%);
  width: 100%;
  max-width: 80%;
}

footer h3 {
  margin-bottom: 1em;
  font-size: 2em;
  font-family: 'Amatic SC', 'Courier New', Courier, monospace;
}

.inputform {
  width: 100%;
  height: auto;
  margin: 0px 0 0;
  color: black;
  position: relative;
}

#textInput {
  width: 100%;
  height: 2em;
  padding: 0 20px;
  box-sizing: border-box;
  margin-bottom: 0.5em;

  border: 2px solid #000;
  border-top-left-radius: 50px;
  border-top-right-radius: 50px;
  border-bottom-right-radius: 50px;
  border-bottom-left-radius: 50px;

  font-family: inherit;
  font-size: 1.5em;
  letter-spacing: 0.03em;
}

.placeholder {
  margin: 0.9em 0.9em 0 0;
  padding: 0;

  width: 200%;
  position: absolute;
  left: 50%;
  transform: translate(-50%, -50%);

  color: rgb(58, 58, 58);
  pointer-events: none;

  font-size: 1.6em;
  letter-spacing: 0.05em;

  opacity: 0;
  transition: opacity 0.5s ease-in-out;
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

button {
  padding: 0.2em 0.8em;
  border-top-left-radius: 1em;
  border-top-right-radius: 1em;
  border-bottom-right-radius: 1em;
  border-bottom-left-radius: 1em;

  background-color: transparent;
  border: none;
  color: #000;
  cursor: pointer;
  font-family: 'Amatic SC', 'Courier New', Courier, monospace;
  font-size: 2.5em;
  font-weight: bold;

  transition: forward 0.5s ease-in-out;
}

button:hover {
  background: rgb(201, 207, 129);
}

.output {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 90%;

  font-size: 4em;
  font-weight: bold;
  text-shadow: 0 0 0.1em rgba(0, 0, 0, 0.6);
}

@keyframes changeColor {
  0% {
    color: orange;
    text-shadow: 0 0 0.1em rgba(0, 0, 0, 0.6);
  }

  100% {}
}

.animate-color {
  animation: changeColor 1.5s ease-in-out;
}

#container3D canvas {
  width: 100%;
}

@media (max-width: 400px) {
  body {
    font-size: 10px;
  }
}

@media (min-width: 401px) and (max-width: 768px) {
  body {
    font-size: 12px;
  }
}

@media (min-width: 769px) and (max-width: 1200px) {
  body {
    font-size: 16px;
  }
.output{
  letter-spacing: 0.03em;
}
}

@media (min-width: 1201px) {
  .output{
    letter-spacing: 0.05em;
  }
}

